--- a/src/index.css
+++ b/src/index.css
@@ -122,7 +122,7 @@
     }
 
     body {
-        @apply m-0 p-0 font-sans bg-zinc-300
+        @apply m-0 p-0 font-sans bg-slate-300
     }
 
     button, a {
@@ -165,7 +165,7 @@
     /* =========== FLOATING BTN =========== */
 
     .lines {
-        @apply w-[2.2rem] h-[.1rem] bg-[#000] transition-all duration-300;
+        @apply w-[2.2rem] h-[.12rem] bg-navyBlue transition-all duration-300;
     }
 
     .sup-line.active {
@@ -196,6 +196,10 @@
     }
 
     .text-xxsmall-white {
+        @apply  font-[600] uppercase text-slate-300
+    }
+
+    .text-xxsmall-dark {
         @apply  font-[600] uppercase text-slate-500
     }
     .text-xsmall-white {
@@ -212,9 +216,7 @@
     .text-xsmall-dark {
         @apply text-lg font-[600]  text-zinc-950
     }
-    .text-xxsmall-dark {
-        @apply  font-[600]  text-zinc-500
-    }
+    
 
     .big-title {
         @apply text-[8rem] font-[800] text-navyBlue leading-[150px]
