--- a/src/index.css
+++ b/src/index.css
@@ -139,7 +139,7 @@
 @layer utilities {
     /* =========== MENU BTN =========== */
     .line {
-        @apply w-[3.5rem] h-[.1rem] bg-[#000] transition-all duration-300
+        @apply w-[3.5rem] h-[.1rem] bg-indigo-900 transition-all duration-300
     }
 
     .line-1, .line-3 {
@@ -165,7 +165,7 @@
     /* =========== FLOATING BTN =========== */
 
     .lines {
-        @apply w-[2.2rem] h-[.12rem] bg-navyBlue transition-all duration-300;
+        @apply w-[2.2rem] h-[.12rem] bg-indigo-900 transition-all duration-300;
     }
 
     .sup-line.active {
@@ -186,7 +186,7 @@
             
     }
     .btn-book-online-transparent {
-        @apply button text-navyBlue bg-sky-50 bg-opacity-45 border-2  border-zinc-50
+        @apply button text-indigo-900 bg-sky-50 bg-opacity-45 border-2  border-zinc-50
             
     }
 
@@ -213,20 +213,28 @@
     }
 
     .text-small-dark {
-        @apply text-xl font-[600] uppercase text-zinc-950
+        @apply text-xl font-[600] uppercase text-indigo-900
     }
 
     .text-xsmall-dark {
-        @apply text-lg font-[600]  text-zinc-950
+        @apply text-lg font-[600]  text-indigo-900
+    }
+
+    .text-med {
+        @apply text-2xl font-[600]  text-zinc-300
+    }
+
+    .text-med-dark {
+        @apply text-2xl font-[600]  text-indigo-900
     }
     
 
     .big-title {
-        @apply text-[8rem] font-[800] text-navyBlue leading-[150px]
+        @apply text-[8rem] font-[800] text-indigo-900 leading-[150px]
     }
 
     .bigger-title {
-        @apply text-[11rem] font-[800] text-navyBlue leading-[150px]
+        @apply text-[11rem] font-[800] text-indigo-900 leading-[150px]
     }
 
     .work__photo-item {
@@ -236,6 +244,8 @@
     .work__photo-item img {
         @apply block w-full h-full object-cover
     }
+
+  
 
     .font-outline-2 {
         -webkit-text-stroke: 2px white;
