--- a/src/assets/css/accordion.css
+++ b/src/assets/css/accordion.css
@@ -28,11 +28,12 @@
 .bar-navigation {
     height: 80vh;
     width: 80vw;  
-    background-color: var(--color-white);
+    background-color: #2d3e5e;
+    opacity: .3;
     display: grid;
     grid-template-rows: 100%;
     overflow: hidden;
-    border: 2px solid #f0f9ff;
+    /* border: 2px solid #f0f9ff; */
     border-radius: 30px;
     font-family: 'Anybody', sans-serif;
 }
