integrated the Servicesinfo into sticky cards

--- a/src/assets/css/accordion.css
+++ b/src/assets/css/accordion.css
@@ -28,8 +28,8 @@
 .bar-navigation {
     height: 80vh;
     width: 80vw;  
-    background-color: #2d3e5e;
-    opacity: .3;
+    background-color: #4f46e5;
+
     display: grid;
     grid-template-rows: 100%;
     overflow: hidden;
